--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/Articles?createDatabaseIfNotEx
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driver-class-name=org.h2.Driver
