--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=News Website
-spring.profiles.active=vulnerable
+spring.profiles.active=secure
 
 spring.datasource.url=jdbc:mysql://localhost:3306/Articles?createDatabaseIfNotExist=true
 
