added owasp top 5 - Security misconfiguration - actuator endpoint

--- a/src/main/resources/application-secure.properties
+++ b/src/main/resources/application-secure.properties
@@ -5,6 +5,5 @@ management.endpoints.web.exposure.include=env
 
 # Enable or disable specific Actuator endpoints
 management.endpoint.env.enabled=true
-management.endpoint.env.show-values=ALWAYS
 # Disable sanitization to show sensitive information
-management.endpoint.env.keys-to-sanitize=password
+management.endpoint.env.keys-to-sanitize=password,secret
