--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,24 @@ spring.application.name=News Website
 spring.profiles.active=secure
 
 spring.datasource.url=jdbc:mysql://localhost:3306/NewsApp?createDatabaseIfNotExist=true
-
 spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+jwt.secret.key = somesecretkeyexample
+
+## Actuator base path configuration
+#management.endpoints.web.base-path=/management
+#
+## Expose only specific Actuator endpoints
+#management.endpoints.web.exposure.include=env
+#
+## Enable or disable specific Actuator endpoints
+#management.endpoint.env.enabled=true
+#management.endpoint.env.show-values=ALWAYS
+## Disable sanitization to show sensitive information
+#management.endpoint.env.keys-to-sanitize=password
 
 
 #spring.datasource.url=jdbc:h2:mem:testdb
