Finished owasp 7 - Identification and authentication failures by allowing users to set weak passwords like "12345678" or "password". Fixed with PasswordValidatorUtil class.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=News Website
-spring.profiles.active=insecure
+spring.profiles.active=secure
 
 spring.datasource.url=jdbc:mysql://localhost:3306/NewsApp?createDatabaseIfNotExist=true
 spring.datasource.username=root
