Finished owasp 8 - Software and Data Integrity Failures by implementing a fetch feature which doesnt sanitize data collected from a different server

--- a/src/main/resources/application-secure.properties
+++ b/src/main/resources/application-secure.properties
@@ -7,3 +7,8 @@ management.endpoints.web.exposure.include=env
 management.endpoint.env.enabled=true
 # Disable sanitization to show sensitive information
 management.endpoint.env.keys-to-sanitize=password,secret
+
+logging.file.name=logs/app.log
+
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
