--- a/src/main/resources/application-secure.properties
+++ b/src/main/resources/application-secure.properties
@@ -8,7 +8,14 @@ management.endpoint.env.enabled=true
 # Disable sanitization to show sensitive information
 management.endpoint.env.keys-to-sanitize=password,secret
 
-logging.file.name=logs/app.log
 
-logging.level.root=INFO
-logging.level.org.springframework.web=INFO
+logging.level.com.News.News.filter=INFO
+
+# Enable logging to a file
+logging.file.name=logs/application.log
+
+# Maximum size of a single log file before rollover
+logging.logback.rollingpolicy.max-file-size=10MB
+
+# Number of rolled-over log files to keep
+logging.logback.rollingpolicy.max-history=30
